--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,25 @@
 {
     "cSpell.words": [
+        "addone",
         "Aman",
+        "amet",
         "anothername",
         "Chauhan",
+        "coursename",
+        "currval",
         "Dehradun",
+        "greetng",
+        "IIFE",
+        "lastname",
+        "newli",
+        "Nums",
+        "Opti",
         "satyam",
-        "satym"
+        "satym",
+        "shaktiman",
+        "spiderman",
+        "Terniary",
+        "userfullname",
+        "Userlogged"
     ]
 }
